@@ -415,7 +415,9 @@
     { @"entry.primaryPhoneNumber", @"(650) 555-1212" },
     { @"", @"" },
   
-    { @"GDataExtendedProperty", @"<gd:extendedProperty name='X-MOZ-ALARM-LAST-ACK' value='2006-10-03T19:01:14Z'/>" },
+    { @"GDataExtendedProperty", @"<gd:extendedProperty name='X-MOZ-ALARM-LAST-ACK'"
+      " value='2006-10-03T19:01:14Z'"
+      " realm='http://schemas.google.com/g/2005#shared' />" },
     { @"name", @"X-MOZ-ALARM-LAST-ACK" },
     { @"value", @"2006-10-03T19:01:14Z" },
     { @"", @"" },
